--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_FOLDER=/var/www/html/writer/public/uploads/files
 
 LOG_CHANNEL=stack
 
