--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "srmklive/paypal": "~1.0",
         "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
