--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_FOLDER=/var/www/html/writer/public/uploads/files
+APP_ADMIN=1
 
 LOG_CHANNEL=stack
 
