--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "paypal/paypal-checkout-sdk": "^1.0",
         "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
